Squashed commit of the following:
commit f37f8a150a701ad48f9f401a874aaede01e904eb
Merge: 8cc14a3 a343ceb
Author: Jerrell Mardis <jerrell.mardis@gmail.com>
Date:   Sat Aug 9 13:05:46 2014 -0500

    Merge branch 'feature/tv_shows' into develop

commit a343cebd0ed60a10bda7d34b76239dedf55be63b
Author: Jerrell Mardis <jerrell.mardis@gmail.com>
Date:   Sat Aug 9 13:05:06 2014 -0500

    Switched back to Sugar

    Sugar has proven to be a bit faster. Also added ratings to the default cards and screenshots of the app.

commit 4ac78e16c751d497d8279856790a1cdfd9c1768c
Author: Jerrell Mardis <jerrell.mardis@gmail.com>
Date:   Sat Aug 9 10:38:16 2014 -0500

    Code cleanup

    Removed model objects that weren't being used or persisted. Flattened genres and production company objects for easy storage and retrieval.

commit e9e6d4ce936f6fa0b4a3a4f7f4c92190fc4e3a0b
Author: Jerrell Mardis <jerrell.mardis@gmail.com>
Date:   Fri Aug 8 23:34:25 2014 -0500

    Added TV Show feature

    Added TV Show support. Cleaned up a lot of the model objects and added a few to support adding TV Shows. Switched from Sugar ORM to ActiveAndroid. ActiveAndroid seems ta bit more stable and robost. Fixed a couple bug throughout the app that found while testing.

--- a/tv/src/main/res/layout/fragment_add_source_dialog.xml
+++ b/tv/src/main/res/layout/fragment_add_source_dialog.xml
@@ -33,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:layout_marginLeft="8dp"
+        android:text="@string/add_source"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold"
         tools:text="ADD SOURCE"/>
@@ -66,6 +67,28 @@
         android:hint="@string/enter_password"
         android:imeOptions="actionDone"
         android:inputType="textPassword"/>
+
+    <RadioGroup
+        android:id="@+id/source_type_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radio_movie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:text="@string/movie"/>
+
+        <RadioButton
+            android:id="@+id/radio_tv_show"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/tv_show"/>
+    </RadioGroup>
 
     <LinearLayout
         android:layout_width="match_parent"
