--- a/tv/src/main/res/layout/fragment_add_source_dialog.xml
+++ b/tv/src/main/res/layout/fragment_add_source_dialog.xml
@@ -37,19 +37,33 @@
         android:textStyle="bold"
         tools:text="ADD SOURCE"/>
 
-    <EditText
-        android:id="@+id/path"
-        android:layout_width="480dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="8dp"
-        android:hint="@string/enter_ip_address"
-        android:imeOptions="actionNext"
-        android:inputType="text"/>
+        android:layout_marginBottom="8dp">
+
+        <EditText
+            android:id="@+id/path"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
+            android:hint="@string/enter_ip_address"
+            android:imeOptions="actionNext"
+            android:inputType="text"/>
+
+        <ImageButton
+            android:id="@+id/search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_search"
+            style="?android:borderlessButtonStyle"/>
+
+    </LinearLayout>
 
     <EditText
         android:id="@+id/user"
-        android:layout_width="480dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"
@@ -59,7 +73,7 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="480dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"
@@ -69,7 +83,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:gravity="right"
         android:orientation="horizontal">
