Added TV show/movie recommendations
Fixes #8

Implemented a very simple recommendation service that will recommend the most recently released movie title in your collection as well as 2 TV shows that have recently aired. This is very rudimentary at this point but will be expanded in the future.

--- a/tv/src/main/res/layout/fragment_add_source_dialog.xml
+++ b/tv/src/main/res/layout/fragment_add_source_dialog.xml
@@ -71,6 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif"
         android:hint="@string/enter_password"
         android:imeOptions="actionDone"
         android:inputType="textPassword"/>
