--- a/tv/src/main/res/layout/activity_search.xml
+++ b/tv/src/main/res/layout/activity_search.xml
@@ -15,11 +15,12 @@
    limitations under the License.
 -->
 
-<fragment android:id="@+id/search_fragment"
-          android:name="com.jerrellmardis.amphitheatre.fragment.SearchFragment"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          tools:context=".SearchActivity"
-          tools:deviceIds="tv"/>
+<fragment
+    android:id="@+id/search_fragment"
+    android:name="com.jerrellmardis.amphitheatre.fragment.SearchFragment"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".SearchActivity"
+    tools:deviceIds="tv"/>
